# become_roboticist

./: README.md  package.xml  setup.py
config/: ros2_controllers.yaml
freecad_output/: CMakeLists.txt  package.xml
freecad_output/launch/: description.launch.py  display.launch.py  gazebo.launch.py
freecad_output/meshes/: box_realsense_add_Mesh.dae  box_realsense_add_Mesh001.dae  box_realsense_add_Mesh002.dae  box_realsense_add_Mesh003.dae  box_realsense_add_caster_wheel.dae.dae  box_realsense_add_collision_base_footprint_.dae  box_realsense_add_collision_sensor_d435i_accel_frame_.dae  box_realsense_add_collision_sensor_d435i_accel_optical_frame_.dae  box_realsense_add_collision_sensor_d435i_bottom_screw_frame_.dae  (+28 more)
freecad_output/urdf/: krytn.urdf
gripper/: CMakeLists.txt  package.xml
krytn/: package.xml  setup.cfg  setup.py  tray&glass.dae
launch/: gazebo.launch.py
maci/: package.xml  setup.cfg  setup.py
maci/config/: ros2_control.yaml
maci/launch/: gazebo.launch.py  moveit.launch.py  spawn_maci.launch.py  start_robot.launch.py
maci/maci/: maci.py
maci/robot_description/: maci.urdf.xacro
maci_moveit/: .setup_assistant  CMakeLists.txt  package.xml
maciv2/: coke_pick.py  order_target_location.py
maciv2_moveit/: .setup_assistant  CMakeLists.txt  package.xml
model/: coke_table_world.sdf
robot_description/: maciv2.urdf.xacro  out.urdf
robotiq_arg85_description/: CMakeLists.txt  package.xml
robotiq_arg85_description/launch/: test_2f_140_model.launch
robotiq_arg85_description/urdf/: robotiq_arg2f.xacro  robotiq_arg2f_140_model_macro.xacro
(+74 files in other folders)
