<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maci</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="badwolf.johnnyv@gmail.com">ros</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>ur_description</depend>
  <depend>ign_ros2_control_demos</depend>
  <depend>moveit_planners_chomp</depend>
  <depend>moveit_ros_perception</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
